<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fruit Radar</string>
    <string name="title_edit_plant">Edit Plant</string>
    <string name="plant_has_unfilled_form_fields">Please add more information about your plant ...</string>
    <string name="all_plant_fields_are_filled">All required fields of the plant are filled.</string>
    <string name="choose_plant_type">Choose a type of plant!</string>
    <string name="count">Count:</string>
    <string name="description">Description</string>
    <string name="position">Position:</string>
    <string name="delete">Delete</string>
    <string name="GPS">GPS</string>
    <string name="osm_license">© OpenStreetMap contributors</string>
    <string name="map">Map</string>
    <string name="title_activity_choose_plant_type">Plant Category</string>
    <string name="apple">Apple</string>
    <string name="apricot">Apricot</string>
    <string name="pear">Pear</string>
    <string name="cherry">Cherry</string>
    <string name="mirabelle">Mirabelle</string>
    <string name="mulberry">Mulberry</string>
    <string name="plum">Plum</string>
    <string name="quince">Quince</string>
    <string name="other_fruit_trees">Other Fruit Tree</string>
    <string name="blackberry">Blackberry</string>
    <string name="blueberry">Blueberry</string>
    <string name="bilberry">Bilberry</string>
    <string name="raspberry">Raspberry</string>
    <string name="elder">Elder</string>
    <string name="rose_hip">Rose Hip</string>
    <string name="juneberry">Juneberry</string>
    <string name="currant">Currant</string>
    <string name="cornel_cherry">Cornel Cherry</string>
    <string name="seaberry">Seaberry</string>
    <string name="haw">Haw</string>
    <string name="sloe">Sloe</string>
    <string name="other_fruit_shrub">Other Fruit Shrub</string>
    <string name="ramsons">Ramsons</string>
    <string name="mint">Mint</string>
    <string name="rosemary">Rosemary</string>
    <string name="thyme">Thyme</string>
    <string name="other_herbs">Other Herbs</string>
    <string name="juniper">Juniper</string>
    <string name="woodruff">Woodruff</string>
    <string name="hazel">Hazel</string>
    <string name="chestnut">Chestnut</string>
    <string name="wild_strawberry">Wild Strawberry</string>
    <string name="walnut">Walnut</string>
    <string name="other_nut">Other Nut</string>
    <string name="unnamed_plant">Unknown Plant</string>
    <string name="sour_cherry">Sour Cherry</string>
    <string name="lemon_balm">Lemon Balm</string>
    <string name="chokeberry">Chokeberry</string>
    <string name="medlar">Medlar</string>
    <string name="service_tree">Service Tree</string>
    <string name="rowan">Rowan</string>
    <string name="almond">Almond</string>
    <string name="gooseberry">Gooseberry</string>
    <string name="peach">Peach</string>
    <string name="silverberry">Silverberry</string>
    <string name="tangerine">Tangerine</string>
    <string name="grapefruit">Grapefruit</string>
    <string name="red_ribes">Red Ribes</string>
    <string name="black_ribes">Black Ribes</string>
    <string name="strawberry">Strawberry</string>
    <string name="jostaberry">Jostaberry</string>
    <string name="greengage">Greengage</string>
    <string name="grape">Grape</string>
    <string name="orange">Orange</string>
    <string name="dogwood">Dogwood</string>
    <string name="lemon">Lemon</string>
    <string name="briar">Briar</string>
    <string name="fig">Fig</string>
    <string name="horse_chestnut">Horse Chestnut</string>
    <string name="reason_plant_categories_could_not_load" translatable="false">The plant categories could not be loaded. This means that all edited plants do not have a category.</string>
    <string name="plant_categories_could_not_load_ask_close" translatable="false">Would you like to close the app to prevent damage to your recoded plants?</string>
    <string name="fruit_resource_id_not_found">Error: Add the plant category in the strings.xml file.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In (Account Required)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register new account</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="invalid_credentials">User does not exist or password is wrong.</string>
    <string name="error_field_required">Please fill this field</string>
    <string name="error_invalid_email">Please fill in a valid email address.</string>
    <string name="signup_successful_see_email">The sign up process was successful. You should receive an e-mail soon.</string>
    <string name="login_api_name_mundraub">Mundraub.org</string>
    <string name="login_api_name_na_ovoce">Na-Ovoce.cz</string>
    <string name="login_api_name_my_na_ovoce">Custom Na-Ovoce Server</string>
    <string name="login_api_name_dummy">Local Dummy API</string>
    <string name="login_api_name_fruitmap">FruitMap.org</string>
    <string name="title_plant_detail">Plant Detail</string>
    <string name="upload_plant_online">Share this plant online</string>
    <string name="edit_plant_online">Upload the changes</string>
    <string name="delete_plant_online">Remove the plant from the platform</string>
    <string name="view_plant_online">View the plant online</string>
    <string name="plant_online_description">Change the plant online:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="ask_open_the_map">Would you like to open the map and place the plant first?</string>
    <string name="reason_reposition_unknown_position">The recorded position of the plant might be too far off. Please check it.</string>
    <string name="reason_reposition_gps_position">The GPS position is probably too far away from reality. Please check on the map if it is ok.</string>
    <string name="delete_plant_information">If you delete the plant online, the plant, all comments and all other information about this plant is lost.</string>
    <string name="ask_delete_plant">Would you like to remove the plant from the online platform?</string>
    <string name="edit">Edit</string>
    <string name="ask_upload_ok">Would you like to upload the plant like this?</string>
    <string name="reason_category_changes">On \"<xliff:g example="Mundraub.org" id="platform">%1$s</xliff:g>\", the category \"<xliff:g example="Tangerine" id="source_category">%2$s</xliff:g>\" can only be uploaded as \"<xliff:g example="Other Fruit Tree" id="mapped_category">%3$s</xliff:g>\".</string>
    <string name="position_not_set">unknown</string>
    <string name="reason_plant_has_other_plant_nearby">There is another plant of a similar type close to this plant. If you upload the plant, this might be a duplicate.</string>
    <string name="ask_open_map_before_upload">Would you like to check the map and cancel the upload?</string>
    <string name="error">Error</string>
    <string name="success">Success!</string>
    <string name="attention">Attention</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="delete_plant_reason">If you delete the plant, all images and data of the plant on your phone will be lost. If you uploaded the plant, the platform still has the data.</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="title_my_plants">My Plants</string>
    <string name="plant_list_date_format">MM/dd/yyyy</string>
    <string name="task_completed_successfully" translatable="false">The operation ended successfully.</string>
    <string name="task_was_cancelled">The operation was cancelled.</string>
    <string name="operation_not_permitted">The operation is not allowed.</string>
    <string name="error_unexpected_return_code">The server responded with an unexpected return code.</string>
    <string name="error_email_needs_to_be_validated_before_login">Please validate your e-mail address before.</string>
    <string name="error_not_specified">An error has occurred and if the developers put in more time, you would know more about what is going on. Time to start developing the app!</string>
    <string name="error_not_implemented">This operation is not yet implemented.</string>
    <string name="success_plant_uploaded">The plant was uploaded to the online platform.</string>
    <string name="success_plant_updated">The plant has successfully been updated.</string>
    <string name="success_plant_deleted">The plant was deleted from the online platform.</string>
    <string name="error_could_not_post_plant">The plant could not be published online because the server rejected the data.</string>
    <string name="error_no_plant_id">The server did not respond with a plant id. Have a look on-line at what happened.</string>
    <string name="error_unknown_hostname">Could not resolve the host name and thus could not connect to the server. Please check your Internet connection.</string>
    <string name="error_could_not_parse_open_street_map_data">Could not get the address from OpenStreetMap.</string>
    <string name="error_count_not_check_plant">Could not ask the server if the plant exists.</string>
    <string name="error_connection">There was an error with the connection to the server.</string>
    <string name="error_could_not_delete_plant">The plant could not be deleted online. There was some error. Please go online and delete it yourself.</string>
    <string name="error_could_not_validate_host">The identity of the server is not trusted. This is a known problem on older platforms. Currently, you can disable trusted connections in the settings to work around this error. Feel free to contribute a solution.</string>
    <string name="about_app">This is the unofficial app for Mundraub.org. The source is open. You are invited to contribute.</string>
    <string name="about_view_source">View the source code</string>
    <string name="about_view_source_url" translatable="false">https://github.com/niccokunzmann/mundraub-android</string>
    <string name="about_four_freedoms">You have the freedom to run, study, redistribute and improve the software.</string>
    <string name="about_view_four_freedoms">More about our four freedoms</string>
    <string name="about_issues">If you experience any problem with the app and like to report it, you can open a new issue.</string>
    <string name="about_view_issues">View issues or open one</string>
    <string name="about_licenses">This app has a dual licensing model: GPL version 3 for the app and additionally the MIT license for the map.</string>
    <string name="about_gpl">View GPLv3</string>
    <string name="about_mit">View MIT</string>
    <string name="mundraub_rule_1">Please make sure before you create an entry or before you harvest, that no property rights conflict.</string>
    <string name="mundraub_rule_2">Be careful with trees, nature and animals living there. Picking for your own needs is allowed but not more and not commercially. You need a permit for that.</string>
    <string name="mundraub_rule_3">Share the fruit of your discovery and give something back.</string>
    <string name="mundraub_rule_4">Get involved in care and plantation of fruit trees.</string>
    <string name="mundraub_rules_long_version">Show me the long version!</string>
    <string name="mundraub_rules_i_understand">Sounds reasonable, I understand!</string>
</resources>