<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_plant_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:text="@string/plant_has_unfilled_form_fields" />

            <Button
                android:id="@+id/button_plant_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_plant_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_weight="0"
                    android:text="@string/count" />

                <EditText
                    android:id="@+id/number_of_plants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="1" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="+" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="-" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/image_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="-1"
                android:background="@color/colorClickable"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_horizontal_margin"
                android:layout_weight="0"
                android:background="@android:color/background_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_gps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/GPS" />

                    <Button
                        android:id="@+id/button_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/map" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_weight="0"
                        android:text="@string/position" />

                    <TextView
                        android:id="@+id/text_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="0" />

                    <ImageView
                        android:id="@+id/image_plant_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="0"
                        android:clickable="true"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <TextView
                        android:id="@+id/text_map_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="0"
                        android:clickable="true"
                        android:text="@string/osm_license" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_horizontal_margin"
                android:background="@android:color/background_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/ok" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>